--- a/lab4/Lab4_FPGA_Template/db/DE0_NANO.lpc.html
+++ b/lab4/Lab4_FPGA_Template/db/DE0_NANO.lpc.html
@@ -16,15 +16,31 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
+<TD >count</TD>
+<TD >31</TD>
+<TD >0</TD>
+<TD >13</TD>
+<TD >0</TD>
+<TD >20</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >proc</TD>
-<TD >30</TD>
-<TD >9</TD>
-<TD >30</TD>
-<TD >9</TD>
-<TD >9</TD>
-<TD >9</TD>
-<TD >9</TD>
-<TD >9</TD>
+<TD >21</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >3</TD>
+<TD >4</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >3</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
